--- a/web/css/main.css
+++ b/web/css/main.css
@@ -11,3 +11,34 @@ body {
     left: 0;
     background: white;
 }
+
+.black-link {
+    color: black;
+    cursor: pointer;
+}
+
+.full-width-table {
+    width: 100%;
+}
+
+.border-bottom-only {
+    border-bottom: 1px solid #bbbbbb;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+}
+
+input {
+    text-indent: 5px;
+}
+
+.loader-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loading-img {
+}
