Add managing of courses, presentations, students Code Cleanup Minor changes in database schema

--- a/web/css/global.css
+++ b/web/css/global.css
@@ -83,3 +83,11 @@ input {
         transform: scale(1.1);
         transition: 0.3s;
   }
+
+.small-padded {
+    padding: 1em;
+}
+
+.medium-padded {
+    padding: 3em;
+}
