--- a/web/css/global.css
+++ b/web/css/global.css
@@ -91,3 +91,14 @@ input {
 .medium-padded {
     padding: 3em;
 }
+
+button:focus {outline:0;}
+
+.disabled-highlight-table td {
+    -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
