Disable getting default template (temporary) - Allow choosing of template if there are more than one

--- a/web/css/assessment.css
+++ b/web/css/assessment.css
@@ -191,3 +191,11 @@
 .div-dropdown {
   display: none;
 }
+
+.header-edit-mode {
+  font-size: 1.3em;
+}
+
+.header-template-name {
+  font-weight: 900;
+}
