--- a/web/css/assessment.css
+++ b/web/css/assessment.css
@@ -1,24 +1,24 @@
 /* These are styles for assessment.html ONLY */
 
-.template-container{
-    background: white;
-    margin: 5em 1em;
-    padding: 1em;
-    border: 1px solid #b7b7b7;
+.template-container {
+  background: white;
+  margin: 5em 1em;
+  padding: 1em;
+  border: 1px solid #b7b7b7;
 }
 
 .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    width: 100%;
-    padding: 0 .5em;
-    margin-bottom: 1em;
-    background: #f1ebeb;
-    box-shadow: 0px 3px 3px rgba(173, 169, 169, .5);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  padding: 0 .5em;
+  margin-bottom: 1em;
+  background: #f1ebeb;
+  box-shadow: 0px 3px 3px rgba(173, 169, 169, .5);
 }
 
 .header-icon {
@@ -40,34 +40,31 @@
 }
 
 .table {
-    border: 1px solid black;
-  }
+  border: 1px solid black;
+}
 
-  .table td {
-    border: 1px solid black;
-    padding: .5em;
-    cursor: pointer;
-  }
+.table td {
+  border: 1px solid black;
+  padding: .5em;
+  cursor: pointer;
+}
 
-  .table th {
-    border: 1px solid black !important;
-    padding: .2em;
-    text-align: center;
-    vertical-align: middle !important;
-    cursor: default;
-  }
+.table th {
+  border: 1px solid black !important;
+  padding: .2em;
+  text-align: center;
+  vertical-align: middle !important;
+  cursor: default;
+}
 
-  .table thead th {
-    background-color: rgb(247, 114, 114);
-  }
+.table thead th {
+  background-color: rgb(247, 114, 114);
+}
 
-  .table tbody th {
-    background-color: rgb(228, 228, 228);
-  }
+.table tbody th {
+  background-color: rgb(228, 228, 228);
+}
 
-    .table th.danger {
-        background-color: rgb(247, 114, 114);
-    }
 .hidden-fields-container {
   margin-top: 1em;
   display: none;
@@ -91,10 +88,10 @@
 
 .small-score-card {
   display: inline-block;
-  background:#b9b9b9;
+  background: #b9b9b9;
   padding: 5px;
   margin: 5px;
-  color:#484848;
+  color: #484848;
   border-radius: 5px;
   cursor: default;
 }
@@ -112,39 +109,39 @@
 }
 
 .modal-input {
-    display: block;
-    width: 100%;
-    margin-top: 12px;
-    padding-bottom: 7px;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: none;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    border-bottom: 1px solid grey;
-    outline: none;
+  display: block;
+  width: 100%;
+  margin-top: 12px;
+  padding-bottom: 7px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: none;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  border-bottom: 1px solid grey;
+  outline: none;
 }
 
 .labeled-input-group {
-    position: relative;
-    margin: auto;
-    -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+  position: relative;
+  margin: auto;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .labeled-input-group label {
-    position: absolute;
-    top: 7px;
-    left: 5px;
-    color: #A9A9A9;
-    cursor: text;
-    transition: .2s;
+  position: absolute;
+  top: 7px;
+  left: 5px;
+  color: #A9A9A9;
+  cursor: text;
+  transition: .2s;
 }
 
-.labeled-input-group input:focus ~ label {
+.labeled-input-group input:focus~label {
   top: -10px;
   color: black;
   font-size: 12px;
@@ -171,22 +168,25 @@
 .autocomplete-items div {
   padding: 10px;
   cursor: pointer;
-  background-color: #fff; 
-  border-bottom: 1px solid #d4d4d4; 
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
 }
 
 /*when hovering an item:*/
+
 .autocomplete-items div:hover {
-  background-color: #e9e9e9; 
+  background-color: #e9e9e9;
 }
 
 /*when navigating through the items using the arrow keys:*/
+
 .autocomplete-active {
-  background-color: DodgerBlue !important; 
-  color: #ffffff; 
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
 
 /* Overried styles from tabledit library */
+
 .tabledit-save-button, .tabledit-confirm-button {
   margin: auto;
 }
@@ -201,4 +201,12 @@
 
 .header-template-name {
   font-weight: 900;
+}
+
+table .table-light {
+  background-color: black;
+ -webkit-transition: all 1s ease-in-out;
+ -moz-transition: all 1s ease-in-out;
+ -o-transition: all 1s ease-in-out;
+ transition: all 1s ease-in-out;
 }
