Add additional features and fixes - Normalization of scores - Change document template - Presentation date in document - Show current template name - User must click Evaluate button to start timer - Removed total score cards - Changed document margin - Temporarily disable walkthrough
To do:
- Add Change directory functionality

--- a/web/css/global.css
+++ b/web/css/global.css
@@ -136,3 +136,21 @@ button:focus {
 .show_dropdown .dropdown_menu {
     display: block;
 }
+
+.black-link {
+    color: black;
+    cursor: pointer;
+    text-decoration: underline;
+    border: none;
+    background: none;
+    outline: initial;
+}
+
+p.popup-icon-link {
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+
+p.popup-icon-link:hover span {
+    text-decoration: underline;
+}
