--- a/web/css/assessment.css
+++ b/web/css/assessment.css
@@ -210,3 +210,15 @@ table .table-light {
  -o-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
 }
+
+span.small-timer {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  padding: .2em;
+  border-radius: 10px;
+}
+
+.small-timer.white-bg {
+  background: white;
+}
